[package]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with CD74HC4067"
keywords = ["embedded-hal-driver", "GPIO", "74HC"]
license = "MIT"
name = "cd74hc4067"
repository = "https://github.com/barafael/cd74hc406-rs7"
homepage = "https://github.com/barafael/cd74hc4067-rs"
readme = "README.md"
exclude = ["coverage.pdf", ".github/workflows/rust.yml", ".gitignore"]

edition = "2021"
version = "0.3.0"

[dependencies]
embedded-hal_0_2 = { package = "embedded-hal", version = "0.2.7", optional = true }
embedded-hal = { version = "1.0.0", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[features]
default = ["eh1"]

# Support for embedded-hal v0.2 traits
eh0 = ["embedded-hal_0_2"]

# Support for embedded-hal v1.x traits
eh1 = ["embedded-hal"]
