[package]
name = "stm32f0-74hc4067-test"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = ""
readme = "README.md"
license = "MIT License"
repository = ""
edition = "2018"

[features]
println_debug = ["rtt-target", "panic-rtt-target"]

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
rtt-target = { version = "0.2.2", features = ["cortex-m"], optional = true }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"], optional = true }
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f072"] }
cd74hc4067 = { path = "../cd74hc4067/" }
picorand = "0.1.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = "thin"
codegen-units = 1
