[package]
name = "stm32f0-74hc4067-example"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = ""
readme = "README.md"
license = "MIT License"
repository = ""
edition = "2021"

[features]
println_debug = ["rtt-target", "panic-rtt-target"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", features = ["device"] }
panic-halt = "1"
embedded-hal = "0.2.7"
rtt-target = { version = "0.6.1", optional = true }
panic-rtt-target = { version = "0.2.0", features = [], optional = true }
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f072"] }
cd74hc4067 = { path = "../cd74hc4067/", features = ["eh0"] }
picorand = "0.1.2"
debugless-unwrap = "0.0.4"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = "thin"
codegen-units = 1
